next: export && import && cache

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "node_resolve"
-version = "0.1.0"
+name = "nodejs-resolver"
+version = "0.0.1"
 edition = "2021"
-
+license = "MIT"
+description = "node resolve"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
