--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ description = "node resolve"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.79"
+serde_json = {version = "1.0.79", features = ["preserve_order"] }
+indexmap = "1.8.1"
