--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,6 +27,8 @@ jobs:
           override: true
       - name: Rust Cache
         uses: Swatinem/rust-cache@v1.3.0
+        with:
+          key: "b"
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
