--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,10 +25,16 @@ jobs:
           toolchain: nightly
           components: clippy
           override: true
-      - name: Rust Cache
-        uses: Swatinem/rust-cache@v1.3.0
+      - name: Configure cache
+        uses: actions/cache@v2
         with:
-          key: "b"
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: test-${{ runner.os }}-cargo-gcc-${{ matrix.gcc }}-clang-${{ matrix.clang }}-${{ hashFiles('**/Cargo.lock') }}
       - name: Clippy
         uses: actions-rs/clippy-check@v1
         with:
