--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 serde_json = {version = "1.0.81", features = ["preserve_order"] }
 indexmap = "1.8.1"
 dashmap = "5.3.3"
+daachorse = "0.4.1"
 
 [profile.bench]
 lto = true
