--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = {version = "1.0.81", features = ["preserve_order"] }
 indexmap = "1.8.1"
 dashmap = "5.3.3"
 daachorse = "0.4.1"
+once_cell = "1.10.0"
 
 [profile.bench]
 lto = true
