--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = {version = "1.0.81", features = ["preserve_order"] }
+serde_json = { version = "1.0.81", features = ["preserve_order"] }
 indexmap = "1.8.1"
 dashmap = "5.3.3"
 daachorse = "0.4.1"
 once_cell = "1.10.0"
+fst = "0.4.7"
+phf = { version = "0.10.1", features = ["macros"] }
 
 [profile.bench]
 lto = true
