--- a/crates/node-binding/package.json
+++ b/crates/node-binding/package.json
@@ -15,5 +15,23 @@
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "2.9.0"
+  },
+  "napi": {
+    "name": "nodejs-resolver",
+    "triples": {
+      "defaults": true,
+      "additional": [
+        "x86_64-unknown-linux-musl",
+        "x86_64-unknown-freebsd",
+        "i686-pc-windows-msvc",
+        "aarch64-unknown-linux-gnu",
+        "armv7-unknown-linux-gnueabihf",
+        "aarch64-apple-darwin",
+        "aarch64-linux-android",
+        "aarch64-unknown-linux-musl",
+        "aarch64-pc-windows-msvc",
+        "armv7-linux-androideabi"
+      ]
+    }
   }
 }
