--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nodejs-resolver"
-version = "0.0.18"
+version = "0.0.19"
 edition = "2021"
 license = "MIT"
 description = "nodejs resolve"
@@ -15,7 +15,8 @@ daachorse = "0.4.1"
 once_cell = "1.10.0"
 phf = { version = "0.10.1", features = ["macros"] }
 smol_str = "0.1.23"
-tsconfig = "0.1.0"
+json_comments = "0.2.1"
+regex = "1.5.6"
 
 [profile.bench]
 lto = true
