--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nodejs-resolver"
-version = "0.0.22"
+version = "0.0.23"
 edition = "2021"
 license = "MIT"
 description = "nodejs resolve"
@@ -9,15 +9,14 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 
 [dependencies]
 serde_json = { version = "1.0.81", features = ["preserve_order"] }
-indexmap = "1.8.1"
-dashmap = "5.3.3"
-daachorse = "0.4.1"
-once_cell = "1.10.0"
+indexmap = "1.9.1"
+dashmap = "5.3.4"
+daachorse = "0.4.3"
+once_cell = "1.12.0"
 phf = { version = "0.10.1", features = ["macros"] }
 smol_str = "0.1.23"
-json_comments = "0.2.1"
-regex = "1.5.6"
 tracing = "0.1.35"
+jsonc-parser = { version = "0.19.0", features = ["serde"] }
 
 [dev-dependencies]
 tracing-subscriber = "0.3.11"
