--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ tests/bench.rs
 bench/esbuildResolve.js
 bench/enhanceResolve.js
 bench/esbuildResolve_native.go
+bench/esbuildResolve_native
 bench/go.mod
 bench/go.sum
 
