--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = { version = "1.0.82", features = ["preserve_order"] }
+serde_json = { version = "1.0.83", features = ["preserve_order"] }
 indexmap = "1.9.1"
 dashmap = "5.3.4"
-daachorse = "0.4.3"
-once_cell = "1.13.0"
-phf = { version = "0.11.0", features = ["macros"] }
+daachorse = "1.0.0"
+once_cell = "1.13.1"
 smol_str = "0.1.23"
 tracing = "0.1.36"
-jsonc-parser = { version = "0.20.0", features = ["serde"] }
+jsonc-parser = { version = "0.21.0", features = ["serde"] }
+serde = { version = "1.0.144", features = ["derive"] }
 
 [dev-dependencies]
 tracing-subscriber = "0.3.15"
