--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nodejs-resolver"
-version = "0.0.55"
+version = "0.0.56"
 edition = "2021"
 license = "MIT"
 description = "nodejs resolve"
@@ -8,18 +8,18 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = { version = "1.0.87", features = ["preserve_order"] }
-indexmap = "1.9.1"
+serde_json = { version = "1.0.89", features = ["preserve_order"] }
+indexmap = "1.9.2"
 dashmap = "5.4.0"
 daachorse = "1.0.0"
 once_cell = "1.16.0"
 smol_str = "0.1.23"
 tracing = "0.1.37"
 jsonc-parser = { version = "0.21.0", features = ["serde"] }
-serde = { version = "1.0.147", features = ["derive"] }
+serde = { version = "1.0.149", features = ["derive"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 [dev-dependencies]
-tracing-subscriber = "0.3.16"
 tracing-span-tree = "0.1.1"
 
 [profile.bench]
