--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/bvanjoi/nodejs_resolver"
 serde_json = { version = "1.0.89", features = ["preserve_order"] }
 indexmap = "1.9.2"
 dashmap = "5.4.0"
+hashlink = "0.8.1"
 daachorse = "1.0.0"
 once_cell = "1.16.0"
 smol_str = "0.1.23"
