perf: use rustc_hash

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing = "0.1.37"
 jsonc-parser = { version = "0.21.0", features = ["serde"] }
 serde = { version = "1.0.149", features = ["derive"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
+rustc-hash = "1.1.0"
 
 [dev-dependencies]
 tracing-span-tree = "0.1.1"
