--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0.149", features = ["derive"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 rustc-hash = "1.1.0"
 path-absolutize = "3.0.14"
+dunce = "1.0.3"
 
 [dev-dependencies]
 tracing-span-tree = "0.1.1"
