chore: update bench.yml
closes #138

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,35 +23,31 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
-      - name: Install minimal nightly
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: nightly
+
+      - name: Install toolchain
+        run: rustup show
+
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: "npm"
+          cache: npm
           cache-dependency-path: bench/package-lock.json
-      - name: Configure Rust cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: bench-${{ runner.os }}-cargo-gcc-${{ matrix.gcc }}-clang-${{ matrix.clang }}-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache
+        uses: Swatinem/rust-cache@v1
+
       - name: Generate bench case and run
         run: |
           cd ./bench
           bash ./scripts/run.sh ${{ matrix.manager }}
           cd ..
+
       - name: Download previous benchmark data
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: ./cache
-          key: ${{ runner.os }}-benchmark
+          key: ${{ runner.os }}-${{ matrix.manager }}-benchmark
+
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
